<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity" android:background="#CFCFC4">

    <FrameLayout
            android:layout_width="389dp"
            android:layout_height="415dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/frameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.306">

    </FrameLayout>
    <EditText
            android:layout_width="391dp"
            android:layout_height="110dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/moveText"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.189" android:background="#FFFFFF" android:hint="@string/movesHint"
            app:layout_constraintHorizontal_bias="0.45" android:textColor="#000000"/>
    <Button
            android:layout_width="177dp"
            android:layout_height="53dp" android:id="@+id/movesCompilerButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintTop_toBottomOf="@+id/moveText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#89CFF0" app:layout_constraintVertical_bias="0.666"
            android:text="@string/compilar"/>
    <Button
            android:layout_width="132dp"
            android:layout_height="52dp" android:id="@+id/movesReportButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintTop_toBottomOf="@+id/moveText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#89CFF0"
            app:layout_constraintVertical_bias="0.684" android:enabled="false"
            android:text="@string/reports"/>
    <TextView
            android:text="@string/GameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/GameTitleText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout" app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp" android:textColor="#000000" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.184"/>
    <TextView
            android:text="@string/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvWait"
            app:layout_constraintTop_toBottomOf="@+id/GameTitleText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/frameLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>